# hyprdock

./: .envrc  .gitignore  Cargo.toml  PKGBUILD  README.md  example-css.css  example.json  example_config.toml  flake.nix
.direnv/: flake-profile-1-link  flake-profile-3-link
.github/workflows/: release.yml  rust.yml
nix/: default.nix  hm.nix
src/: gui.rs  main.rs
src/monitors/: hypr_monitors.rs  mod.rs
