[package]
name = "hyprdock"
version = "0.3.5"
edition = "2021"
description = "A small program to handle external pluggable screens with hyprland and acpid"
repository = "https://github.com/DashieTM/hyprdock"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = { version = "0.5.4" }
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "*"
json = "*"
toml = "0.7.3"
gtk = "0.17"
gtk-layer-shell = "0.6.1"
