[package]
name = "hyprdock"
version = "0.3.6"
edition = "2021"
description = "A small program to handle external pluggable screens with hyprland and acpid"
repository = "https://github.com/DashieTM/hyprdock"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories-next = "2.0.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.107"
json = "0.12.4"
toml = "0.7.3"
gtk = { version = "0.17.1", package = "gtk" }
gtk-layer-shell = "0.6.1"
