[package]
name = "hyprdock"
version = "0.4.2"
edition = "2024"
description = "A small program to handle external pluggable screens with hyprland and acpid"
repository = "https://github.com/DashieTM/hyprdock"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories-next = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
json = "0.12.4"
toml = "0.8.22"
gtk = { version = "0.18.2", package = "gtk" }
gtk-layer-shell = "0.8.2"
optional_struct = "0.5.2"
once_cell = "1.21.3"
